--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Profil | RooxJSphire</title>
+  <title>Profil | YanxiDev</title>
 
   <!-- TailwindCSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -51,9 +51,9 @@
     <!-- Home -->
     <section id="home" class="min-h-screen flex flex-col items-center justify-center text-center -mt-16">
       <div class="max-w-4xl">
-        <img src="https://files.catbox.moe/4vu5ge.jpg" alt="Foto Profil RooxJSphire" class="w-40 h-40 md:w-48 md:h-48 mx-auto rounded-full border-4 border-js-yellow shadow-xl mb-6 transform hover:scale-105 transition-transform duration-300" />
+        <img src="https://files.catbox.moe/4vu5ge.jpg" alt="Foto Profil YanxiDev" class="w-40 h-40 md:w-48 md:h-48 mx-auto rounded-full border-4 border-js-yellow shadow-xl mb-6 transform hover:scale-105 transition-transform duration-300" />
         <h1 class="text-4xl sm:text-6xl md:text-7xl font-bold text-white mb-3">YanxiDev</h1>
-        <h2 class="text-2xl sm:text-3xl md:text-4xl font-semibold text-gray-300 mb-8">Pendiri <span class="font-mono text-js-yellow">Forum Chat JSphire</span></h2>
+        <h2 class="text-2xl sm:text-3xl md:text-4xl font-semibold text-gray-300 mb-8">1 of the founders <span class="font-mono text-js-yellow">Ax4Gank</span></h2>
         <p class="text-lg text-gray-400 max-w-2xl mx-auto mb-10">Seorang pelajar asal Jawa Tengah yang bercita-cita sebagai programmer dan ahli cybersecurity Indonesia, bertekat untuk mengembangkan keterampilan dan pengetahuannya dalam bidang teknologi informasi.</p>
         <a href="#tentang" class="bg-js-yellow text-black font-bold py-3 px-10 rounded-full hover:bg-yellow-300 transition-colors duration-300 text-lg">Selengkapnya</a>
       </div>
@@ -66,7 +66,7 @@
       </div>
       <div class="text-gray-300 text-lg space-y-4 max-w-4xl mx-auto text-center md:text-left">
         <p>Halo, saya Yanxi. Perjalanan saya di dunia koding dimulai dari kecintaan murni terhadap JavaScript, bahasa yang menurut saya memiliki kekuatan dan fleksibilitas tanpa batas. Dari sana, saya melihat adanya kebutuhan akan sebuah wadah bagi para developer, baik pemula maupun ahli, untuk berdiskusi dan bertumbuh bersama.</p>
-        <p>Itulah yang melatarbelakangi lahirnya <strong class="text-js-yellow font-semibold">Forum Chat JSphire</strong>. Sebuah platform yang saya dirikan dengan tujuan membangun komunitas yang solid, suportif, dan inovatif. Fokus utama saya saat ini adalah mengembangkan fitur-fitur forum dan memastikan JSphire menjadi tempat yang nyaman untuk belajar dan berbagi pengetahuan seputar <strong class="text-js-yellow font-semibold">HTML, CSS, dan tentu saja, JavaScript.</strong></p>
+        <p>Itulah yang melatarbelakangi lahirnya <strong class="text-js-yellow font-semibold">Ax4Gank</strong>. Sebuah script yang saya dirikan dengan tujuan mengembangkan fitur-fitur script dan memastikan Ax4Gank menjadi tempat yang nyaman untuk belajar dan berbagi pengetahuan seputar <strong class="text-js-yellow font-semibold">HTML, CSS, dan tentu saja, JavaScript.</strong></p>
       </div>
     </section>
 
