--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Home -->
     <section id="home" class="min-h-screen flex flex-col items-center justify-center text-center -mt-16">
       <div class="max-w-4xl">
-        <img src="https://files.catbox.moe/4vu5ge.jpg" alt="Foto Profil YanxiDev" class="w-40 h-40 md:w-48 md:h-48 mx-auto rounded-full border-4 border-js-yellow shadow-xl mb-6 transform hover:scale-105 transition-transform duration-300" />
+        <img src="https://files.catbox.moe/ugfhvk.jpg" alt="Foto Profil YanxiDev" class="w-40 h-40 md:w-48 md:h-48 mx-auto rounded-full border-4 border-js-yellow shadow-xl mb-6 transform hover:scale-105 transition-transform duration-300" />
         <h1 class="text-4xl sm:text-6xl md:text-7xl font-bold text-white mb-3">YanxiDev</h1>
         <h2 class="text-2xl sm:text-3xl md:text-4xl font-semibold text-gray-300 mb-8">1 of the founders <span class="font-mono text-js-yellow">Ax4Gank</span></h2>
         <p class="text-lg text-gray-400 max-w-2xl mx-auto mb-10">Seorang pelajar asal Jawa Tengah yang bercita-cita sebagai programmer dan ahli cybersecurity Indonesia, bertekat untuk mengembangkan keterampilan dan pengetahuannya dalam bidang teknologi informasi.</p>
