--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h2 class="text-js-yellow">Tentang Saya</h2>
       </div>
       <div class="text-gray-300 text-lg space-y-4 max-w-4xl mx-auto text-center md:text-left">
-        <p>Halo, saya Yanxi. Perjalanan saya di dunia koding dimulai dari kecintaan murni terhadap JavaScript, bahasa yang menurut saya memiliki kekuatan dan fleksibilitas tanpa batas. Dari sana, saya melihat adanya kebutuhan akan sebuah wadah bagi para developer, baik pemula maupun ahli, untuk berdiskusi dan bertumbuh bersama.</p>
+        <p>Halo, saya Bryan atau biasa di panggil Yanci.Saya mulai Perjalanan saya di dunia koding dimulai dari kecintaan murni terhadap JavaScript, bahasa yang menurut saya memiliki kekuatan dan fleksibilitas tanpa batas. Dari sana, saya melihat adanya kebutuhan akan sebuah wadah bagi para developer, baik pemula maupun ahli, untuk berdiskusi dan bertumbuh bersama.</p>
         <p>Itulah yang melatarbelakangi lahirnya <strong class="text-js-yellow font-semibold">Ax4Gank</strong>. Sebuah script yang saya dirikan dengan tujuan mengembangkan fitur-fitur script dan memastikan Ax4Gank menjadi tempat yang nyaman untuk belajar dan berbagi pengetahuan seputar <strong class="text-js-yellow font-semibold">HTML, CSS, dan tentu saja, JavaScript.</strong></p>
       </div>
     </section>
@@ -111,7 +111,7 @@
 
   <!-- Footer -->
   <footer class="text-center py-12 text-gray-500 text-sm">
-    <p>© 2024 YanxiDev. All rights reserved.</p>
+    <p>© 2025 Yanci. All rights reserved.</p>
   </footer>
 
   <!-- JavaScript -->
