--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
       <div class="max-w-2xl mx-auto">
         <h3 class="text-4xl font-bold text-white mb-4">Mari Terhubung</h3>
-        <p class="text-gray-400 text-lg mb-8">Punya pertanyaan, ide, atau hanya ingin menyapa? Jangan ragu untuk menghubungi saya. Saya selalu terbuka untuk diskusi dan kolaborasi. Anda juga bisa bergabung di Forum Chat JSphire!</p>
+        <p class="text-gray-400 text-lg mb-8">Punya pertanyaan, ide, atau hanya ingin menyapa? Jangan ragu untuk menghubungi saya. Saya selalu terbuka untuk diskusi dan kolaborasi. Anda juga bisa bergabung di Forum Chat Ax4Gank!</p>
         <div class="flex justify-center items-center space-x-6">
           <a href="mailto: bryanggbet71@gmail.com" title="Email" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fas fa-envelope"></i></a>
           <a href="https://wa.me/6285794718190" target="_blank" title="WhatsApp" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fab fa-whatsapp"></i></a>
